--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "memory.h": "c",
         "stdio.h": "c",
         "string.h": "c",
-        "cdefs.h": "c"
+        "cdefs.h": "c",
+        "cmake.cmakePath": "/path/tocmake"
     }
+    
 }
